--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^14.0.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.9.0",
+    "ng-circle-progress": "^1.7.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
